[tool:pytest]
norecursedirs = build
testpaths = tests/unit
junit_family=xunit1
markers =
    integration: integration tests requiring a running PostgreSQL instance

[coverage:report]
exclude_lines =
    if __name__ == .__main__.:
show_missing = True

[flake8]
ignore = W503, W504
max-line-length = 100

[metadata]
license_file = LICENSE
